fixed mobile ver section about overlapping

--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -1,5 +1,4 @@
 .about {
-  height: 35vh;
   margin-bottom: 92px;
 
   @include on-tablet {
